Добавлена главная страница (неполная)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <div class="description">
+        <div class="main-desc">
+            <h1>
+                Добро пожаловать в наше веб-приложение для создания и управления заметками с использованием FastAPI!
+                Здесь вы можете легко и удобно организовывать свои записи, создавать заметки с заголовками, 
+                текстовыми описаниями и другими параметрами, такими как срок выполнения.
+                Мы предоставляем вам мощные инструменты для управления своим списком записей.
 
+            </h1>
+            <img src="images/5059486.webp" alt="">
+        </div>
+    </div>
+    <h1 style="text-align: center; font-size: 40px;">Функциональность</h1>
+    <ul>
+        <li>
+            <h2>Регистрация и аутентификация:</h2>
+            <p>Пройдите простой процесс регистрации и аутентификации, чтобы начать использовать все возможности нашего сервиса. Ваш аккаунт позволит вам безопасно сохранять и редактировать свои заметки.</p>
+        </li>
+        <li>
+            <h2>Создание заметок:</h2>
+            <p>Воспользуйтесь возможностью создавать заметки с подробными заголовками, текстовым содержанием и добавлять дополнительные параметры, чтобы лучше организовать свою информацию.</p>
+        </li>
+        <li>
+            <h2>Добавление тегов:</h2>
+            <p>Легко категоризируйте ваши заметки, добавляя к ним теги. Одна заметка может быть отнесена к нескольким тегам, что делает управление вашими записями более гибким.</p>
+        </li>
+        <li>
+            <h2>Поиск и фильтрация:</h2>
+            <p>Используйте функционал поиска и фильтрации для быстрого доступа к нужным записям. Фильтруйте заметки по заголовку, содержанию, тегам и другим параметрам.</p>
+        </li>
+        <li>
+            <h2>Редактирование и удаление заметок:</h2>
+            <p>Мы предоставляем вам возможность редактировать и удалять свои заметки в любое время. Ваша информация всегда под вашим полным контролем.</p>
+        </li>
+        <li>
+            <h2>Пагинация:</h2>
+            <p>Удобная пагинация позволяет вам просматривать большие списки заметок без лишних усилий.</p>
+        </li>
+        <li>
+            <h2>Асинхронная обработка:</h2>
+            <p>Воспользуйтесь преимуществами асинхронной обработки запросов, обеспечивая быстрый и отзывчивый опыт работы с вашими данными.</p>
+        </li>
+    </ul>
     <script src="/scripts/script.js"></script>
 </body>
 </html>
